# Marginalization_MAE

./: README.md
Project/: 01_03_2023_main.cpp  07_03_2023main.cpp  CMakeLists.txt  Pose2_SLAM_previous_result_with_initial_estimation.dot  algorithm_utils.cpp  algorithm_utils.h  file_utils.cpp  file_utils.h  graph_utils.cpp  graph_utils.h  main.cpp  main2.cpp  main3.cpp  main_backup_07_01_2023.cpp  main_backup_09_01_2023.cpp  main_initialize_zero.cpp  matrix_utils.cpp  matrix_utils.h  node.cpp  node.h  note_to_get_poses.txt  point.cpp  relation.cpp  relation.h  string_utils.cpp  string_utils.h  tmp.cpp
Project/useless_file/: point.h  string_utils.cpp  string_utils.h
